Submitted getting the metadata cleaned up into numerical and numCats, will continue with imputation.  THere WILL be nans in a lot of areas, this is what I am trying to fix

--- a/VioAndMetadata_Cleaning/CleanUpMetadata_NoVioUse.ipynb
+++ b/VioAndMetadata_Cleaning/CleanUpMetadata_NoVioUse.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -2046,7 +2046,7 @@
        "[25830 rows x 595 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2064,7 +2064,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2188,7 +2188,8 @@
     "'qiita_empo_3', #dont want\n",
     "'qiita_study_id', #dont want\n",
     "'state', #We will use country for now\n",
-    "'census_region' #We will use country for now\n",
+    "'census_region', #We will use country for now\n",
+    "'altitude' #This has basically no answers\n",
     "]"
    ]
   },
@@ -2206,7 +2207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2292,7 +2293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2317,7 +2318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -2380,7 +2381,7 @@
        " 'consume_animal_products_abx']"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2401,7 +2402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2453,7 +2454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2734,7 +2735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2776,7 +2777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2796,7 +2797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -2804,9 +2805,9 @@
      "output_type": "stream",
      "text": [
       "(19439, 595)\n",
-      "(19439, 470)\n",
-      "(19439, 454)\n",
-      "(19439, 418)\n"
+      "(19439, 469)\n",
+      "(19439, 453)\n",
+      "(19439, 417)\n"
      ]
     }
    ],
@@ -2825,14 +2826,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(19439, 145)\n"
+      "(19439, 144)\n"
      ]
     }
    ],
@@ -2846,7 +2847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2891,7 +2892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -4492,7 +4493,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>19439 rows × 143 columns</p>\n",
+       "<p>19439 rows × 142 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -5840,10 +5841,10 @@
        "10317.000106849 51ef7e6920c7894dadc01d883038f30234871c33f9888c4...  Occasionally (1-2 times/week)  \n",
        "10317.000106863 3c25a38841b10153729a10697f705963b73e30a209a9e32...  Occasionally (1-2 times/week)  \n",
        "\n",
-       "[19439 rows x 143 columns]"
+       "[19439 rows x 142 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5854,7 +5855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5873,7 +5874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5894,7 +5895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5921,7 +5922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -5981,7 +5982,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5996,14 +5997,15 @@
     "#    notWorkedFeats.remove(featCol)\n",
     "\n",
     "#for jj in notWorkedFeats:\n",
-    "#    print(dietDF[jj].value_counts())\n",
+    "#   print(dietDF[jj].value_counts())\n",
+    "#    print(jj)\n",
     "    \n",
     "#Assume they all have nans are part of their counts btw"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6025,7 +6027,7 @@
     "'Unspecified':np.nan,\n",
     "np.nan:np.nan}\n",
     "\n",
-    "roommatesAns={'None':0 \n",
+    "roommatesAns={'None':0,\n",
     "'Not provided':np.nan,\n",
     "'One':1,\n",
     "'Two':2,\n",
@@ -6050,15 +6052,15 @@
     "'Unspecified':np.nan,\n",
     "np.nan:np.nan}\n",
     "\n",
-    "level_of_educationAns={'Graduate or Professional degree':6\n",
-    "'Not provided':np.nan\n",
-    "'Bachelor\\'s degree':4\n",
-    "'Some college or technical school':2\n",
-    "'Some graduate school or professional':5\n",
-    "'High School or GED equilivant':1\n",
-    "'Did not complete high school':0\n",
-    "'Unspecified'\n",
-    "'Associate\\'s degree':3\n",
+    "level_of_educationAns={'Graduate or Professional degree':6,\n",
+    "'Not provided':np.nan,\n",
+    "'Bachelor\\'s degree':4,\n",
+    "'Some college or technical school':2,\n",
+    "'Some graduate school or professional':5,\n",
+    "'High School or GED equilivant':1,\n",
+    "'Did not complete high school':0,\n",
+    "'Unspecified':np.nan,\n",
+    "'Associate\\'s degree':3,\n",
     "np.nan:np.nan}\n",
     "\n",
     "last_travelAns={'I have not been outside of my country of residence in the past year.':0,\n",
@@ -6079,7 +6081,7 @@
     "'Unspecified':np.nan,\n",
     "np.nan:np.nan}\n",
     "        \n",
-    "cancer_treatmentAns={}'Not provided':np.nan,\n",
+    "cancer_treatmentAns={'Not provided':np.nan,\n",
     "'Unspecified':np.nan,\n",
     "'Surgery only':1,\n",
     "'Chemotherapy':3,\n",
@@ -6198,8 +6200,8 @@
     "'Vegetarian but eat seafood':3,\n",
     "'Vegetarian':4,\n",
     "'Vegan':5,\n",
-    "'Not provided':np.nan\n",
-    "'Unspecified':np.nan\n",
+    "'Not provided':np.nan,\n",
+    "'Unspecified':np.nan,\n",
     "np.nan:np.nan}\n",
     "        \n",
     "dominant_handAns={'I am right handed':3,\n",
@@ -6223,7 +6225,7 @@
     "'I don\\'t drink':0,\n",
     "'1':1,\n",
     "'2-3':3,\n",
-    "'Unspecified,\n",
+    "'Unspecified':np.nan,\n",
     "'3-4':4,\n",
     "'4+':6,\n",
     "'2-Jan':np.nan,\n",
@@ -6271,6 +6273,106 @@
     "'Ileal and Colonic Crohn\\'s Disease':5,\n",
     "np.nan:np.nan}"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "toughFeatureDict={'types_of_plants':types_of_plantsAns,'sleep_duration':sleep_durationAns,'roommates':roommatesAns,'sex':sexAns,\n",
+    " 'race':raceAns,'level_of_education':level_of_educationAns,'last_travel':last_travelAns,'antibiotic_history':antibiotic_historyAns,\n",
+    " 'cancer_treatment':cancer_treatmentAns, 'breastmilk_formula_ensure':breastmilk_formula_ensureAns,\n",
+    " 'bowel_movement_quality':bowel_movement_qualityAns,'contraceptive':contraceptiveAns,'country':countryAns,\n",
+    " 'deodorant_use':deodorant_useAns,'diabetes_type':diabetes_typeAns,'diet_type':diet_typeAns,'dominant_hand':dominant_handAns,\n",
+    " 'drinking_water_source':drinking_water_sourceAns,'drinks_per_session':drinks_per_sessionAns,'fed_as_infant':fed_as_infantAns,\n",
+    " 'flu_vaccine_date':flu_vaccine_dateAns,'gluten':glutenAns,'ibd_diagnosis':ibd_diagnosisAns,'ibd_diagnosis_refined':ibd_diagnosis_refinedAns}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "types_of_plants\n",
+      "sleep_duration\n",
+      "roommates\n",
+      "sex\n",
+      "race\n",
+      "level_of_education\n",
+      "last_travel\n",
+      "antibiotic_history\n",
+      "cancer_treatment\n",
+      "breastmilk_formula_ensure\n",
+      "bowel_movement_quality\n",
+      "contraceptive\n",
+      "country\n",
+      "deodorant_use\n",
+      "diabetes_type\n",
+      "diet_type\n",
+      "dominant_hand\n",
+      "drinking_water_source\n",
+      "drinks_per_session\n",
+      "fed_as_infant\n",
+      "flu_vaccine_date\n",
+      "gluten\n",
+      "ibd_diagnosis\n",
+      "ibd_diagnosis_refined\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Lets convert the final harder features into numbered categories\n",
+    "for tf in toughFeatureDict:\n",
+    "    print(tf)\n",
+    "    tfPossibles=toughFeatureDict[tf]\n",
+    "    dietDF[tf]=dietDF[tf].map(lambda x: tfPossibles[x])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Lets fix the final few!\n",
+    "def finalfeatFixMethod(item):\n",
+    "    if (item == np.nan) or (item=='Unspecified') or (item=='Not provided'):\n",
+    "        return np.nan\n",
+    "    else:\n",
+    "        return item\n",
+    "\n",
+    "finalFixingFeats=['bmi_corrected','age_corrected','elevation','height_cm','weight_kg']\n",
+    "for ffeet in finalFixingFeats:\n",
+    "    dietDF[ffeet]=dietDF[ffeet].map(finalfeatFixMethod)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#dietDF.to_csv(path_or_buf='cleanedUpMetadata_noVio_AGP_humfece.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# DONE CLEANING NOW NEED IMPUTATION"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
